Trim study guides to junior full-stack Java scope
Keep only material relevant for landing a junior full-stack Java developer job; defer advanced topics for post-hire study.

- Kept in full (40): core Java, Spring Boot fundamentals, JPA, SQL basics, REST, testing, Git/Docker/Maven, frontend (JS/CSS/HTML/React), HR, and junior gap-fill guides.
- Trimmed advanced sub-sections (16): e.g. CompletableFuture/JMM from concurrency, GC tuning/class-loading from JVM, AOP authoring from bean lifecycle, DBA/ops bits from DB guides, graphs/heaps/tries from DSA, 15 advanced GoF patterns (kept 8 + summary).
- Reduced whole-topic-advanced files to awareness stubs (22): reactive, OAuth2/OIDC, distributed systems, system design, saga/CQRS, Kubernetes, cloud/AWS/Terraform, CI/CD, observability, Next.js, clean architecture, software-architect, mastery roadmaps.

Nothing deleted entirely; full content recoverable from git history.